# adex

./: Cargo.toml  README.md
.docker/: Dockerfile
.github/actions/deps-install/: action.yml
.github/workflows/: adex-cli.yml  dev-build.yml  fmt-and-lint.yml  pr-lint.yml  release-build.yml  test.yml
mm2src/adex_cli/: Cargo.toml
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  sia.rs  solana.rs  test_coin.rs  utxo.rs  z_coin.rs
mm2src/coins/eth/: eth_balance_events.rs  eth_hd_wallet.rs  eth_rpc.rs  eth_tests.rs  eth_wasm_tests.rs  eth_withdraw.rs  for_tests.rs  nft_swap_contract_abi.json  v2_activation.rs
mm2src/coins/hd_wallet/: account_ops.rs  address_ops.rs  coin_ops.rs  confirm_address.rs  errors.rs  mod.rs  pubkey.rs  wallet_ops.rs  withdraw_ops.rs
mm2src/coins/lightning/: ln_events.rs  ln_p2p.rs  ln_sql.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  get_new_address.rs  hd_account_balance_rpc_error.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs
mm2src/coins/sia/: address.rs  blake2b_internal.rs  encoding.rs  http_client.rs  spend_policy.rs
mm2src/coins/solana/: solana_common_tests.rs  solana_tests.rs  spl.rs  (+1 more)
mm2src/coins_activation/: Cargo.toml
mm2src/common/: Cargo.toml  common.rs
mm2src/crypto/: Cargo.toml
mm2src/crypto/src/: decrypt.rs  encrypt.rs  global_hd_ctx.rs  hw_error.rs  hw_rpc_task.rs  key_derivation.rs  lib.rs  mnemonic.rs  privkey.rs  slip21.rs  standard_hd_path.rs
mm2src/gossipsub/: Cargo.toml
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_libp2p/: Cargo.toml
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_metrics/: Cargo.toml
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_p2p/: Cargo.toml
mm2src/trezor/: Cargo.toml
scripts/ci/: lo0_config.sh
(+155 files in other folders)
